Update logo and remove sections; modify card texts

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#membership">Membership</a></li>
-          <li><a href="#expeditions">Expeditions</a></li>
-          <li><a href="#culinary">Culinary</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -50,12 +48,12 @@
       <div class="card">
         <img src="logo.png" alt="Culinary Heritage icon" class="card-icon">
         <h3>Culinary Heritage</h3>
-        <p>Celebrate gastronomy rooted in the land. Our gatherings honour slow food traditions and regional delicacies.</p>
+        <p>Celebrate gastronomy rooted in the land. Our gatherings honour food traditions and regional delicacies.</p>
       </div>
       <div class="card">
         <img src="logo.png" alt="Insights icon" class="card-icon">
         <h3>Insights</h3>
-        <p>Gain access to lectures, research and dialogues that illuminate Southeast Asia’s history and future.</p>
+        <p>Engage in thoughtful discussions on economics, policy and governance in Southeast Asia.</p>
       </div>
     </div>
   </section>
@@ -66,20 +64,6 @@
   <section id="membership" class="section">
     <h2>Membership</h2>
     <p>Membership is by invitation only. Our members are passionate about land reform, liberty, exploration, culinary arts and cultural heritage. Prospective members are nominated by existing members.</p>
-  </section>
-  <section id="expeditions" class="section">
-    <h2>Expeditions &amp; Events</h2>
-    <p>We organise lectures, excursions and dinners that explore the cultural and natural heritage of Southeast Asia, such as:</p>
-    <ul>
-      <li>An expedition through Luang Prabang tracing Lan Xang’s royal history.</li>
-      <li>A symposium on land value tax featuring leading Georgist scholars.</li>
-      <li>A Slow Food dinner celebrating indigenous Lao ingredients.</li>
-      <li>An anthropological field study of highland minority cultures in northern Thailand.</li>
-    </ul>
-  </section>
-  <section id="culinary" class="section">
-    <h2>Culinary Heritage</h2>
-    <p>Our culinary events honour slow food traditions and regional delicacies, reflecting the abundance of the Mekong basin.</p>
   </section>
   <section id="contact" class="section">
     <h2>Contact Us</h2>
