Add SEO meta tags, sitemap, robots.txt and CNAME

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Mekong Order</title>
+  <title>The Mekong Order | Land Stewardship, Exploration, Gastronomy & Policy</title>
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="The Mekong Order is an invitation‑only society championing land stewardship, personal liberty, exploration, gastronomy and policy discourse across Southeast Asia.">
+  <meta name="keywords" content="Mekong Order, land stewardship, exploration, gastronomy, Southeast Asia, policy, governance, libertarian, Georgist">
+  <meta name="robots" content="index, follow">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="The Mekong Order">
+  <meta property="og:description" content="Invitation‑only society championing land stewardship, exploration, gastronomy and policy discourse across Southeast Asia.">
+  <meta property="og:image" content="https://pallan51.github.io/mekong-order-gold/logo.png">
+  <meta property="og:url" content="https://mekongorder.org">
+  <meta property="og:type" content="website">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="The Mekong Order">
+  <meta name="twitter:description" content="Invitation‑only society championing land stewardship, exploration, gastronomy and policy discourse across Southeast Asia.">
+  <meta name="twitter:image" content="https://pallan51.github.io/mekong-order-gold/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Structured Data for search engines -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "The Mekong Order",
+    "url": "https://mekongorder.org",
+    "logo": "https://pallan51.github.io/mekong-order-gold/logo.png",
+    "description": "Invitation‑only society championing land stewardship, exploration, gastronomy and policy discourse across Southeast Asia.",
+    "email": "info@mekongorder.com"
+  }
+  </script>
 </head>
 <body>
   <header class="top-bar">
@@ -19,7 +47,6 @@
       </div>
       <nav class="main-nav">
         <ul>
-          <li><a href="#about">About</a></li>
           <li><a href="#membership">Membership</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
