Update email address

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </section>
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <p>For enquiries, partnerships or membership recommendations, please write to us at <a href="mailto:info@mekongorder.com">info@mekongorder.com</a>.</p>
+    <p>For enquiries, partnerships or membership recommendations, please write to us at <a href="mailto:info@mekongorder.org">info@mekongorder.org</a>.</p>
   </section>
   <footer class="site-footer">
     <p>&copy; 2026 The Mekong Order. All rights reserved.</p>
