--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     "url": "https://mekongorder.org",
     "logo": "https://pallan51.github.io/mekong-order-gold/logo.png",
     "description": "Invitation‑only society championing land stewardship, exploration, gastronomy and policy discourse across Southeast Asia.",
-    "email": "info@mekongorder.com"
+    "email": "info@mekongorder.org"
   }
   </script>
 </head>
