--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:image" content="https://pallan51.github.io/mekong-order-gold/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-l<link rel="icon" type="image/png" sizes="48x48" href="favicon.png">
+<link rel="icon" type="image/png" sizes="48x48" href="favicon.png">
             <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <!-- Structured Data for search engines -->
