--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </section>
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <p>For enquiries, partnerships or membership recommendations, please write to us at <a href="mailto:info@mekongorder.org">info@mekongorder.org</a>.</p>
+    <p>For enquiries, partnerships or membership recommendations, please write to us at <a href="mailto:info@mekongorder.org" style="color: #f7f1d5 !important; text-decoration: none;">info@mekongorder.org</a>.</p>
   </section>
   <footer class="site-footer">
     <p>&copy; 2026 The Mekong Order. All rights reserved.</p>
